@@ -1464,10 +1464,12 @@ g_key_file_get_string
 g_key_file_get_locale_string
 g_key_file_get_boolean
 g_key_file_get_integer
+g_key_file_get_double
 g_key_file_get_string_list
 g_key_file_get_locale_string_list
 g_key_file_get_boolean_list
 g_key_file_get_integer_list
+g_key_file_get_double_list
 g_key_file_get_comment
 
 <SUBSECTION>
@@ -1476,10 +1478,12 @@ g_key_file_set_string
 g_key_file_set_locale_string
 g_key_file_set_boolean
 g_key_file_set_integer
+g_key_file_set_double
 g_key_file_set_string_list
 g_key_file_set_locale_string_list
 g_key_file_set_boolean_list
 g_key_file_set_integer_list
+g_key_file_set_double_list
 g_key_file_set_comment
 g_key_file_remove_group
 g_key_file_remove_key
